--- a/pub_analyze_residues_orientation.ipynb
+++ b/pub_analyze_residues_orientation.ipynb
@@ -17,11 +17,11 @@
    ],
    "source": [
     "# analyze residues orientation\n",
-    "from gromacs.fileformats.xvg import XVG\n",
+    "# from gromacs.fileformats.xvg import XVG\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
     "import os\n",
-    "from tqdm import tqdm\n",
+    "# from tqdm import tqdm\n",
     "import MDAnalysis as mda\n",
     "from MDAnalysis.analysis import align\n",
     "\n",
